--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <p></p>This is a practice project for students in <a href="https://kibo.school/trykibo">Kibo's Web Foundations Course</a>. <p>The real <a href="https://restofworld.org">restofworld.org</a> is awesome, and we're really grateful to them for letting us use their homepage as source material for learning. Thanks rest of world!</p>
   </details>
 
-  <header>
+  <header class="head1">
     <div class="masthead-branding">
-      <a class="masthead-branding-logo" href="/">
+      <!-- <a class="masthead-branding-logo" href="/">
         rest of world
-      </a>
+      </a> -->
       <span class="masthead-branding-tagline">
         Reporting Global Tech Stories
       </span>
@@ -49,7 +49,7 @@
 
   <main>
     <section class='big-story'>
-      <article id='big-story' class="bs">
+      <article id='big-story' class="bs" >
         <a class="bs-img" href="https://restofworld.org/2022/blackouts/">
           <div class="image-container ">
             <img
@@ -74,7 +74,7 @@
         <div class="rs-lab-cont">
           <h2 class="rs-lab">More on blackouts:</h2>
         </div>
-        <article class="rs-cont">
+        <article class="rs-cont rs-cont--n3-i1">
           <div class="rs-cont-story rs-cont-story--img-off">
             <p class='rs-rubric rubric kicker'><span>Blackouts</span></p>
             <a class="rs-cont-link" href="https://restofworld.org/2022/blackouts-five-ways-to-stay-online/">
@@ -84,7 +84,7 @@
                 title="Posts by Vittoria Elliott" class="author url fn" rel="author">Vittoria Elliott</a></p>
           </div>
         </article>
-        <article class="rs-cont rs-cont--n3-i1">
+        <article class="rs-cont rs-cont--n3-i2">
 
           <div class="rs-cont-story rs-cont-story--img-off">
             <p class='rs-rubric rubric kicker'><span>Blackouts</span></p>
@@ -97,7 +97,7 @@
                 class="author url fn" rel="author">Emily Fishbein</a></p>
           </div>
         </article>
-        <article class="rs-cont rs-cont--n3-i2">
+        <article class="rs-cont rs-cont--n3-i3">
 
           <div class="rs-cont-story rs-cont-story--img-off">
             <p class='rs-rubric rubric kicker'><span>Blackouts</span></p>
@@ -172,7 +172,7 @@
             href="https://restofworld.org/2022/china-censors-social-network-douban/">
             <div class="image-container ">
               <img
-                src='assets/GettyImages-1228633990-2800x1575.jpg'
+                src='assets/GettyImages-1228633990-2800x1575.jpeg'
                 alt="" />
             </div>
           </a>
