--- a/index.html
+++ b/index.html
@@ -353,9 +353,9 @@
 
   <footer>
     <div class="footer-branding">
-      <a class="footer-branding-logo" href="/">
+      <!-- <a class="footer-branding-logo" href="/">
         rest of world
-      </a>
+      </a> -->
     </div>
     <div class="footer-menu">
       <ul id="menu-footer-links" class="menu">
